[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
regex = "1.11.1"
rayon = "1.10.0"

[[bin]]
name = "day_1"

[[bin]]
name = "day_2"

[[bin]]
name = "day_3"

[[bin]]
name = "day_4"

[[bin]]
name = "day_5"

[[bin]]
name = "day_6"

[[bin]]
name = "day_7"

[[bin]]
name = "day_8"

[[bin]]
name = "day_9"

[[bin]]
name = "day_10"

[[bin]]
name = "day_11"

[[bin]]
name = "day_12"

[[bin]]
name = "day_13"

[[bin]]
name = "day_14"

[[bin]]
name = "day_15"

[[bin]]
name = "day_16"

[[bin]]
name = "day_17"

[[bin]]
name = "day_18"

[[bin]]
name = "day_19"
